<resources>
    <string name="app_name">Debug Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="func_record_log">Catch Log</string>

    <string name="log_state">State:</string>
    <string name="logcat_log">Logcat:</string>
    <string name="kernel_log">Kernel:</string>
    <string name="report_log">Report</string>
    <string name="stop_catch">Stop</string>
    <string name="start_catch">Start</string>

    <string name="tks_user">Dear user, thanks for your help</string>
    <string name="use_as_usual">You can use the box as usual during debugging</string>
    <string name="dcon_start">Start</string>
    <string name="dcon_running">Running…</string>

    <string name="dcon_ok">Start Success!</string>
    <string name="dcon_already_running">Already Started!</string>
</resources>
