<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="73dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/tv_lb_logcat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logcat_log"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tv_lb_log_state"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_lb_log_state" />

    <TextView
        android:id="@+id/tv_lb_kernel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kernel_log"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tv_lb_logcat"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_lb_logcat" />

    <TextView
        android:id="@+id/tv_logcat_file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_log_state"
        app:layout_constraintTop_toTopOf="@+id/tv_lb_logcat"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tv_kernel_log_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_logcat_file_size"
        app:layout_constraintTop_toTopOf="@+id/tv_lb_kernel"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/stop_catch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_kernel_log_size"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_catch"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toLeftOf="@+id/btn_stop"
        android:layout_marginRight="35dp"
        app:layout_constraintTop_toTopOf="@+id/btn_stop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_stop" />

    <Button
        android:id="@+id/btn_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_log"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="35dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/btn_stop"
        android:layout_marginLeft="35dp"
        app:layout_constraintTop_toTopOf="@+id/btn_stop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_stop" />

    <TextView
        android:id="@+id/tv_lb_log_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_state"
        android:textAlignment="textEnd"
        android:layout_marginStart="379dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_log_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/tv_lb_log_state"
        app:layout_constraintTop_toTopOf="@+id/tv_lb_log_state"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

</android.support.constraint.ConstraintLayout>